# sample-controller-rs

./: Cargo.toml  crd.yaml
src/: controller.rs  crd.rs  crdgen.rs  error.rs  lib.rs  main.rs
