[package]
name = "sample-controller"
default-run = "sample-controller"
edition = "2024"

[[bin]]
name = "sample-controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
k8s-openapi = { version = "0.26", features = ["v1_34"] }
kube = { version = "2", features = ["derive"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
