[package]
name = "sample-controller"
default-run = "sample-controller"
edition = "2024"

[[bin]]
name = "sample-controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
tokio-stream = "0.1"
k8s-openapi = { version = "0.26", features = ["v1_34"] }
kube = { version = "2", features = ["derive", "runtime"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints.clippy]
disallowed_names = "allow"
